# recall-tooling-ocr-server

./: .bazelignore  .bazelrc  .editorconfig  .gitattributes  .gitignore  .golangci.yml  BUILD.bazel  LICENSE  MODULE.bazel  WORKSPACE.bzlmod  go.mod  go.sum  go.work  go.work.sum
.githooks/: README.md  pre-commit  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
api/: README.md
bazel/bazelrc/: cc.bazelrc  ci.bazelrc  correctness.bazelrc  performance.bazelrc  reproducibility.bazelrc
bazel/oci/: images.bzl
bazel/shell/: def.bzl
bazel/toolchains/: BUILD.bazel  container_images.bzl  go_bin_for_host.bzl  shellcheck_repos.bzl
deployments/: README.md
docs/: README.md
pkg/: README.md
scripts/: BUILD.bazel  actionlint.sh.in  go_generate.sh.in  golangci_lint.sh.in  govulncheck.sh.in  keep_sorted.sh.in  shellcheck.sh.in  shfmt.sh.in  unused_gh_actions.sh.in
test/: README.md
